--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,10 @@
             <artifactId>java-design-patterns</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
 </project>
